* Deprecates BaseClass628  * Adds Primative Objects  * Moves CSV to CSVUtil  * Adds UnitTests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
     <testsuites>
         <testsuite name="Core628 Test Suite">
             <directory>tests</directory>
+            <directory suffix=".php">tests/Unit</directory>
         </testsuite>
     </testsuites>
 
