--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-           "DruiD628\\": "lib"
+           "DruiD628\\": "src"
         }
     },
     "authors": [
